# angara

./: CMakeLists.txt  README-eng.md  README.md  example.ara  main.cpp
angara.core/lexer/: Lexer.cpp  Lexer.h  Token.h
angara.core/lexer/lexer.shards/: handleCharLiteral.h  handleKeywords.h  handleNumberLiteral.h  handleStringLiteral.h
angara.core/parser/: Parser.cpp  Parser.h  Variable.h
angara.core/parser/AST/: ASTNode.h  ProgramNode.h  StatementNode.h  VariableDeclarationNode.h
angara.core/parser/shards/: parseStatement.cpp  parseVariableCreation.cpp
